Possible NULL dereference in fast path arena free if ZapResourceArea is true

XMLWordPrintable

    • b15

        Sonarcloud reports a possible NULL dereference when zapping the to-be-freed area in fast-path arena free. Possible call stack for this to happen originates in Node::destruct(PhaseValues* phase).

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: