8263558: Possible NULL dereference in fast path arena free if ZapResourceArea is true

Reviewed-by: kbarrett, coleenp